--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,9 @@
 
   <body>
     <%= yield %>
+    <p> <a href="/products/new"> Make a New Product </a> </p>
+    <a href="/products"> Click to return to the index page </a>
+
+
   </body>
 </html>
