add edit and destroy routes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,12 @@
   </head>
 
   <body>
+    <p> 
+      <a href="/products/new"> Make a New Product | </a> 
+      
+      <a href="/products"> Click to return to the index page </a>
+    </p>
     <%= yield %>
-    <p> <a href="/products/new"> Make a New Product </a> </p>
-    <a href="/products"> Click to return to the index page </a>
 
 
   </body>
