--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -6,7 +6,7 @@
   <p>description: <input type="text" name="description"></p>
   <p>supplier_id: <input type="text" name="supplier_id"></p>
 
-  <input type="submit" value="Make a new Product">
+  <p><input type="submit" value="Make a new Product"></p>
 </form>
 
 
